--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -37,32 +37,30 @@
 \pagestyle{headings}
 
 \newcommand{\dzero}      {D\O}
-\newcommand{\uubar}      {\mbox{$u\bar{u}$}}
-\newcommand{\ddbar}      {\mbox{$d\bar{d}$}}
-\newcommand{\ccbar}      {\mbox{$c\bar{c}$}}
-\newcommand{\ssbar}      {\mbox{$s\bar{s}$}}
-\newcommand{\ttbar}      {\mbox{$t\bar{t}$}}
-\newcommand{\ppbar}      {\mbox{$p\bar{p}$}}
-\newcommand{\bbbar}      {\mbox{$b\bar{b}$}}
-\newcommand{\qqbar}      {\mbox{$q\bar{q}$}}
-\newcommand{\pttt}     {\mbox{$p_{t\bar{t}}$}}
-\newcommand{\mtt}     {\mbox{$m_{t\bar{t}}$}}
-\newcommand{\ytt}     {\mbox{$y_{t\bar{t}}$}}
-\newcommand{\betatt}     {\mbox{$\beta_{z,t\bar{t}}$}}
-\newcommand{\dy}     {\mbox{$\Delta|y|$}}
-\newcommand{\ac}     {\mbox{$A_C$}}
-\newcommand{\afb}     {\mbox{$A_{FB}$}}
-\newcommand{\ljets}      {\mbox{$\ell$+jets}}
-\newcommand{\ejets}      {\mbox{$e$+jets}}
-\newcommand{\mujets}     {\mbox{$\mu$+jets}}
-\newcommand{\wjets}     {\mbox{$W$+jets}}
-\newcommand{\wbb}     {\mbox{$Wb\bar{b}$+jets}}
-\newcommand{\wcc}     {\mbox{$Wc\bar{c}$+jets}}
-\newcommand{\wc}     {\mbox{$Wc$+jets}}
-\newcommand{\wlight}     {\mbox{$W$+light jets}}
-\newcommand{\wpp}     {\mbox{$W^+$}}
-\newcommand{\wm}     {\mbox{$W^-$}}
-\newcommand{\zjets}     {\mbox{$Z$+jets}}
+\newcommand{\uubar}      {\ensuremath{u\bar{u}}}
+\newcommand{\ddbar}      {\ensuremath{d\bar{d}}}
+\newcommand{\ccbar}      {\ensuremath{c\bar{c}}}
+\newcommand{\ssbar}      {\ensuremath{s\bar{s}}}
+\newcommand{\ttbar}      {\ensuremath{t\bar{t}}}
+\newcommand{\ppbar}      {\ensuremath{p\bar{p}}}
+\newcommand{\bbbar}      {\ensuremath{b\bar{b}}}
+\newcommand{\qqbar}      {\ensuremath{q\bar{q}}}
+\newcommand{\pttt}       {\ensuremath{p_{t\bar{t}}}}
+\newcommand{\mtt}        {\ensuremath{m_{t\bar{t}}}}
+\newcommand{\ytt}        {\ensuremath{y_{t\bar{t}}}}
+\newcommand{\betatt}     {\ensuremath{\beta_{z,t\bar{t}}}}
+\newcommand{\dy}         {\ensuremath{\Delta|y|}}
+\newcommand{\ac}         {\ensuremath{A_C}}
+\newcommand{\afb}        {\ensuremath{A_{FB}}}
+\newcommand{\ljets}      {\ensuremath{\ell+{\rm jets}}}
+\newcommand{\ejets}      {\ensuremath{e+{\rm jets}}}
+\newcommand{\mujets}     {\ensuremath{\mu+{\rm jets}}}
+\newcommand{\wjets}      {\ensuremath{W+{\rm jets}}}
+\newcommand{\wbb}        {\ensuremath{Wb\bar{b}+{\rm jets}}}
+\newcommand{\wcc}        {\ensuremath{Wc\bar{c}+{\rm jets}}}
+\newcommand{\wc}         {\ensuremath{Wc+{\rm jets}}}
+\newcommand{\wlight}     {\ensuremath{W+{\rm light~jets}}}
+\newcommand{\zjets}      {\ensuremath{Z+{\rm jets}}}
 \newcommand{\herwig}     {{\tt HERWIG}}
 \newcommand{\pythia}     {{\tt PYTHIA}}
 \newcommand{\mcatnlo}     {{\tt MC@NLO}}
@@ -99,6 +97,7 @@
 \newcommand{\lagr}{\mathcal{L}}
 \newcommand{\renormscale}{\ensuremath{\mu_R^2}}
 \newcommand{\factscale}{\ensuremath{\mu_F^2}}
+\newcommand{\deltaR}[2]{\ensuremath{\Delta{}R\left(#1, #2\right)}}
 
 \def\MeV{\; \mathrm{MeV}}
 \def\GeV{\; \mathrm{GeV}}
