--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \addbibresource{bib/selection.bib}
 \addbibresource{bib/reconstruction.bib}
 \addbibresource{bib/unfolding.bib}
+\addbibresource{bib/results.bib}
  
 \begin{document} 
 
