--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,2 +1,102 @@
 \chapter{Introduction}
 \label{sec:introduction}
+
+Asymmetry is the ``lack of equality or equivalence between parts or
+aspects of something''~\cite{oxforddict}.
+Symmetries are powerful tools in particle physics, because it has
+become evident that practically all laws of nature originates in
+symmetry. Therefore, violations of symmetry present theoretical
+puzzles leading to a deeper understanding of nature. From the
+experimental point of view, the measurement of asymmetries is
+virtually free from systematic uncertainties, and allow to distinguish
+small asymmetric signals from large symmetric backgrounds.
+In the recent history of particle physics, asymmetries have been
+exploited to investigate the nature of the weak interaction. 
+Due to the parity violation typical of the weak
+interaction, processes show differences between particles and
+antiparticles, or between left-handed or right-handed particles.
+Various asymmetries have been studied at collider experiments in the
+past thirty years:
+
+\begin{itemize}
+\item A {\it left-right asymmetry} is defined as $A_{LR}=(N_L -
+  N_R)/(N_L +N_R)$, where $N_L$ is the number of events with a
+  left-polarized particle, and $N_R$ the number of right-polarized
+  events. The left-right asymmetry in $Z$ boson production was
+  measured in 1992 at the Stanford Linear Collider of polarized and
+  unpolarized electron beams\cite{Elia:1993ka}.
+\item A {\it charge asymmetry}  is defined as $A_{+-}=(N_+ -
+  N_-)/(N_+ +N_-)$, where $N_+$ is the number of events with a
+  positively charged particle, and $N_-$ the number of events with a
+  negative particle. Charge asymmetries are used to measure CP
+  violation in $B$ meson decays.
+\item A {\it forward-backward asymmetry} is defined as $A_{FB}=(N_F -
+  N_B)/(N_F +N_B)$, where $N_F$ is the number of events with a
+  particle moving {\it forward} with respect to a chosen reference
+  direction, and $N_B$ the number of {\it backward} events.
+\end{itemize}
+
+The latter is the type of asymmetry more relevant for this
+dissertation. A famous example of forward-backward asymmetry is the
+measurement in muon pair production in $e^+e^-$ annihilation by the
+TASSO collaboration~\cite{Braunschweig:1988fy}. The measurement,
+performed at center-of-mass energies between $35$ and $46.8\GeV{}$,
+showed how the asymmetry provides sensitivity to probe for physics at
+much higher energy, beyond reach for direct observation. In the
+specific case, Fig.~\ref{fig:tasso} shows that, while the inclusive
+cross section measurements agree with the symmetric $QED$ description,
+a forward--backward asymmetry is induced by the interference with the
+$Z$ boson production at $\sqrt{s}\approx 91\GeV{}$.
+
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/introduction/tasso_xs}
+  \includegraphics[width=0.495\textwidth]{figures/introduction/tasso_diffxs}
+  \caption{Inclusive cross section as a function of center-of-mass
+    energy (left) and angular distribution of the muons (right) for
+    muon pair production at $e^+e^-$ collisions~\cite{Braunschweig:1988fy}.}
+  \label{fig:tasso}
+\end{figure}
+
+An analogous asymmetry in top quark pair (\ttbar{}) production might provide a
+probe for new physics processes at scales beyond the current reach of direct
+searches. The CDF and \dzero{} collaborations reported an unexpectedly
+large forward--backward asymmetry in \ttbar{} production at \ppbar{}
+collisions at Tevatron, Fermilab~\cite{Abazov:2014cca,}. As shown in
+Fig.~\ref{fig:afbtev}, the asymmetry has a dependence on the \ttbar{}
+invariant mass (i.e. the center-of-mass energy) with a interesting
+hint of discrepancy with respect to the Standard Model prediction.
+\begin{figure}[!htb]\centering
+  \includegraphics[width=0.495\textwidth]{figures/introduction/afb_tevatron}
+  \caption{Dependence of the forward--backward asymmetry on \ttbar{}
+    invariant mass for Tevatron experiments \dzero{} and CDF, compared
+    with the Standard Model prediction. The horizontal error bars
+    indicate the binning used in each experiment.~\cite{Aguilar-Saavedra:2014kpa}}
+  \label{fig:afbtev}
+\end{figure}
+With the end of Tevatron operations in 2011, no additional data will
+be collected, therefore little room is left for improving the
+precision of the forward--backward asymmetry measurement at \ppbar{}
+collisions, with the goal of clarifying the experimental status.
+However, complementary probes of the asymmetry in \ttbar{} production
+can be studied at $pp$ collisions, provided by the Large Hadron
+Collider at CERN.
+
+This thesis work focus on the study of a central--forward asymmetry in
+\ttbar{} production at $pp$ collisions, also referred to as {\it
+  charge} asymmetry, and defined in Sec.~\ref{sec:topca}. This
+document is organized as follows: Chapter~\ref{sec:theory} gives an
+introduction to the Standard Model of particle physics, with a focus
+on the top quark phenomenology and the production
+asymmetry. Chapter~\ref{sec:experiment} describes the experimental
+setup of the ATLAS detector within the Large Hadron Collider
+accelerator facility. The simulation of the physics processed used in
+the analysis is described in Chapter~\ref{sec:simulation}, while the
+definition of the physics objects follows in
+Chapter~\ref{sec:objects}. Chapter~\ref{sec:strategy} illustrates the
+analysis strategy followed by the description of the event selection
+and the background determination. The reconstruction of the \ttbar
+system kinematics is described in Chapter~\ref{sec:reconstruction},
+while Chapter~\ref{sec:unfolding} describes the unfolding procedure
+used to account for acceptance and resolution effects.
+The results are then summarized in Chapter~\ref{sec:results}, and a
+summary of this thesis is given in Chapter~\ref{sec:conclusion}.
