--- a/tex/selection.tex
+++ b/tex/selection.tex
@@ -1,4 +1,5 @@
 \chapter{Analysis strategy}
+\label{sec:strategy}
 
 This chapter introduces the strategies implemented to measure the
 asymmetries in the datasets collected at \seventev{} and \eighttev{}.
