--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -1,34 +1,30 @@
 \chapter{Conclusion}
 \label{sec:conclusion}
 
-Measurements of the asymmetry in the production of top quark pairs at the ATLAS
-experiment have been performed, using a dataset corresponding to an
-integrated luminosity of 4.7 $fb^{−1}$ taken over the course of 2011
-at a centre-of-mass energy \seventev{} and a dataset corresponding
-to an integrated luminosity of 20 $fb^{−1}$ taken over the course of 2012
-at a centre-of-mass energy \eighttev{}.
+Measurements of the asymmetry in the production of top quark pairs at
+the ATLAS experiment have been performed, using a dataset
+corresponding to an integrated luminosity of 4.7 $fb^{−1}$ taken over
+the course of 2011 at a centre-of-mass energy \seventev{} and a
+dataset corresponding to an integrated luminosity of 20 $fb^{−1}$
+taken over the course of 2012 at a centre-of-mass energy \eighttev{}.
 
 The lepton+jets signature of the semileptonic \ttbar{} decay has been
-exploited to select samples enriched in \ttbar{} events by
-identifying and reconstructing one isolated lepton with large
-transverse momentum, at least four jets and a large missing transverse
-momentum.
-The background contamination of the sample has been studied and data-driven
-techniques has been developed to precisely determine its
-composition. In particular the normalization of the dominant \wjets{} background
-has been constrained exploiting the intrinsic charge asymmetry in $W$
-production at LHC.
-Other background processes, such as single top, Z+jets and diboson
-production have been estimated with Monte Carlo simulations, while QCD
-multijet events have been modeled with well established data-driven
-techniques.
-
-The four momenta of the \ttbar{} pair has been reconstructed event--by--event with a
-kinematic fit of the measured objects. The inclusive and differential
-distribution of the difference of absolute rapidities of the
-reconstructed top and antitop, \dy{}, has then been measured in data
-and estimated for the backgrounds.
-
+exploited to select samples enriched in \ttbar{} events by identifying
+and reconstructing one isolated lepton with large transverse momentum,
+at least four jets and a large missing transverse momentum.
+The background contamination of the sample has been studied and
+data-driven techniques has been developed to precisely determine its
+composition. In particular the normalization of the dominant \wjets{}
+background has been constrained exploiting the intrinsic charge
+asymmetry in $W$ production at LHC. Other background processes, such
+as single top, Z+jets and diboson production have been estimated with
+Monte Carlo simulations, while QCD multijet events have been modeled
+with well established data-driven techniques.
+The four momenta of the \ttbar{} pair has been reconstructed
+event--by--event with a kinematic fit of the measured objects. The
+inclusive and differential distribution of the difference of absolute
+rapidities of the reconstructed top and antitop, \dy{}, has then been
+measured in data and estimated for the backgrounds.
 An unfolding procedure, based on a bayesian inference approach, has
 been performed to estimate the inclusive and differential \dy{}
 distribution, and the corresponding asymmetries, at the parton--level,
@@ -44,6 +40,15 @@ inclusively, as a function of \mtt{}, \pttt{} and \ytt{}, and has been found
 to be compatible with the SM predictions in all cases. The inclusive
 measurement and the one as a function of \mtt{} has also been performed in
 a $\qqbar{}\to\ttbar{}$ enriched sample ($\betatt{}>0.6$), yielding
-SM--compatible results as well.
+SM--compatible results as well. The precision of both inclusive and
+differential measurements is limited by the statistical uncertainty,
+while the largest systematic uncertainties are the ones with a large
+impact on the acceptance for asymmetric backgrounds (\wjets{} and
+single top), such as the uncertainty on the energy scale and
+resolution of jets and leptons.
+
 In the \eighttev{} dataset, the asymmetry \ac{} has been measured
-inclusively and as a function of \mtt{}.  
+inclusively and as a function of \mtt{}; in both case the results are
+compatible with the SM predictions.
+
+
