--- a/main.tex
+++ b/main.tex
@@ -6,8 +6,9 @@
 
 \input{tex/preamble}
 
-\includeonly{tex/results}
+\includeonly{tex/introduction}
 
+\addbibresource{bib/introduction.bib}
 \addbibresource{bib/theory.bib}
 \addbibresource{bib/experiment.bib}
 \addbibresource{bib/simulation.bib}
@@ -41,6 +42,7 @@
 \include{tex/reconstruction}
 \include{tex/unfolding}
 \include{tex/results}
+\include{tex/conclusion}
 
 \appendix
 
