--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 
 \input{tex/preamble}
 
-\includeonly{tex/introduction}
+\includeonly{tex/conclusion}
 
 \addbibresource{bib/introduction.bib}
 \addbibresource{bib/theory.bib}
@@ -17,6 +17,7 @@
 \addbibresource{bib/reconstruction.bib}
 \addbibresource{bib/unfolding.bib}
 \addbibresource{bib/results.bib}
+\addbibresource{bib/conclusion.bib}
  
 \begin{document} 
 
