--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -3,9 +3,9 @@
 
 Measurements of the asymmetry in the production of top quark pairs at
 the ATLAS experiment have been performed, using a dataset
-corresponding to an integrated luminosity of 4.7 $fb^{−1}$ taken over
+corresponding to an integrated luminosity of $4.7 \ifb{}$ taken over
 the course of 2011 at a centre-of-mass energy \seventev{} and a
-dataset corresponding to an integrated luminosity of 20 $fb^{−1}$
+dataset corresponding to an integrated luminosity of $20 \ifb{}$
 taken over the course of 2012 at a centre-of-mass energy \eighttev{}.
 
 The lepton+jets signature of the semileptonic \ttbar{} decay has been
@@ -23,7 +23,7 @@ with well established data-driven techniques.
 The four momenta of the \ttbar{} pair has been reconstructed
 event--by--event with a kinematic fit of the measured objects. The
 inclusive and differential distribution of the difference of absolute
-rapidities of the reconstructed top and antitop, \dy{}, has then been
+rapidities of the reconstructed top and antitop quarks, \dy{}, has then been
 measured in data and estimated for the backgrounds.
 An unfolding procedure, based on a bayesian inference approach, has
 been performed to estimate the inclusive and differential \dy{}
@@ -32,13 +32,13 @@ taking into account the distortions induced by acceptance and
 resolution effects.
 The procedure has been calibrated with the goal of obtaining the most
 precise and accurate achievable asymmetry measurement, by studying the
-response for distributions for which the corresponding parton--level
+response in distributions for which the corresponding parton--level
 asymmetry is known.
 
 In the \seventev{} dataset, the asymmetry \ac{} has been measured
 inclusively, as a function of \mtt{}, \pttt{} and \ytt{}, and has been found
 to be compatible with the SM predictions in all cases. The inclusive
-measurement and the one as a function of \mtt{} has also been performed in
+measurement and the one as a function of \mtt{} have also been performed in
 a $\qqbar{}\to\ttbar{}$ enriched sample ($\betatt{}>0.6$), yielding
 SM--compatible results as well. The precision of both inclusive and
 differential measurements is limited by the statistical uncertainty,
@@ -46,9 +46,31 @@ while the largest systematic uncertainties are the ones with a large
 impact on the acceptance for asymmetric backgrounds (\wjets{} and
 single top), such as the uncertainty on the energy scale and
 resolution of jets and leptons.
-
 In the \eighttev{} dataset, the asymmetry \ac{} has been measured
 inclusively and as a function of \mtt{}; in both case the results are
-compatible with the SM predictions.
+compatible with the SM predictions. The set of measurements will be
+completed to match the \seventev{} set, with the differential
+measurement as a function of \pttt{} and measurements in the
+\qqbar{}--enriched sample with $\betatt{}>0.6$.
 
+At this stage the asymmetry measurements at LHC do not show
+significant deviations from the SM predictions. Due to the different
+initial state and subsequently different asymmetry definitions, a direct comparison
+with the anomaly reported at Tevatron cannot be performed. One
+important step would be to simultaneously measure the dependence of
+the asymmetries on the \ttbar{} invariant mass \mtt{} and velocity
+\betatt{}, in order to extrapolate the 'collider-independent'
+asymmetries $A_u$ and $A_d$~\cite{AguilarSaavedra:2012va}. This
+measurement is quite demanding from the experimental side, since it
+requires a 3--dimensional unfolding in \mtt{}, \betatt{} and
+\dy{}. But it offers a unique possibility of testing at LHC the same
+quantities that are at the origin of the Tevatron \afb{}. 
 
+Measuring the asymmetry \ac{} as an effective probe for new physics in
+future LHC datasets will become more challenging. Proton collisions
+will be delivered at higher center-of-mass energy -- $13\TeV{}$ in
+2015 -- thus making the fraction of \qqbar{} annihilation events even
+smaller. Beside enhancing the \qqbar{} fraction by requiring a large
+$z$--component of the \ttbar{} velocity, a promising approach is to
+study the asymmetry in \ttbar{} events produced in association with
+photons~\cite{Aguilar-Saavedra:2014vta}. 
